fix: add leater-spacing for title

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
 .title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.11;letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
 }
@@ -54,7 +54,7 @@ body {
 .subtitle {
   font-weight: 500;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 1.2;letter-spacing: 0.02em;
 }
 .title, .subtitle {
   color: var(--title-color);
